# claptrap

./: AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  deny.toml
crates/claptrap/: Cargo.toml
crates/claptrap-core/: Cargo.toml
crates/claptrap-core/src/: clap_ext.rs  lib.rs  output.rs  parse.rs  template.rs  types.rs
crates/claptrap-core/src/types/: command.rs  style.rs
crates/claptrap-core/tests/: tests.rs  types.rs
crates/claptrap-core/tests/resources/arg/: action-count.toml  action-help_long.toml  action-help_short.toml  action-version.args  action-version.toml  alias.toml  aliases.args  aliases.toml  allow_hyphen_values.toml  allow_negative_numbers.toml  conflicts_with.args  conflicts_with_all.args  conflicts_with_all.toml  default_missing_value-3.toml  default_missing_value-bool_literal1.toml  default_missing_value_os.toml  default_missing_values.toml  default_missing_values_os.toml  default_value_if-equals1.args  default_value_if-equals2.args  default_value_if-equals2.toml  default_value_if-not_present.toml  default_value_if-present.toml  default_value_if-unset.toml  default_value_ifs-1.args  default_value_ifs-2.toml  default_value_ifs-order.toml  default_values-2.args  display_order.toml  env-default_value.toml  env-multi.toml  env-option.args  exclusive.args  exclusive.toml  global.args  global.toml  groups.args  help.toml  help_heading.toml  hide.toml  (+65 more)
crates/claptrap-core/tests/resources/arg_group/: conflicts_with.toml  conflicts_with_all.args  conflicts_with_all.toml  id.args  id.toml  multiple.args  multiple.toml  required.toml  requires_all.args  requires_all.toml
crates/claptrap-core/tests/resources/basic/: all_aliases.args  all_aliases.toml  long_help.args  short_help.args  short_version.args  unexpected_arg.args  variables.args
crates/claptrap-core/tests/resources/command/: about.args  after_help.toml  after_long_help.toml  alias.args  aliases.toml  allow_missing_positional-1.toml  allow_missing_positional-2.toml  allow_missing_positional-3.args  allow_missing_positional-with_default.args  arg.args  arg_required_else_help.toml  args.toml  args_conflicts_with_subcommands.args  args_conflicts_with_subcommands.toml  args_override_self.args  args_override_self.toml  author.toml  before_help.toml  before_long_help.toml  color-1.toml  color-2.args  disable_colored_help-2.toml  disable_help_flag-1.toml  disable_help_subcommand.toml  disable_version_flag-1.args  display_name.toml  display_order.toml  dont_delimit_trailing_values.args  dont_delimit_trailing_values.toml  external_subcommand_value_parser.args  external_subcommand_value_parser.toml  group.args  group.toml  groups.args  groups.toml  help_expected.toml  help_template.toml  hide_possible_values.toml  ignore_errors.args  infer_long_args-ambiguous.toml  (+42 more)
crates/claptrap-core/tests/resources/possible_value/: alias.args  aliases.args  possible_values.args  possible_values.toml
crates/claptrap-core/tests/resources/quoting/: many_values_special_chars.args  many_values_special_chars.toml  single_value_with_quote.args  single_value_with_quote.toml
crates/claptrap-core/tests/resources/types/: fullspec.toml
crates/claptrap-core/tests/resources/value_parser/: bool.args  bool.toml  boolish.args  boolish.toml  f32.args  f64.args  f64.toml  falsey.args  falsey.toml  i128.args  i16.toml  i32.toml  i64.toml  i8.toml  string.args  u128.args  u128.toml  u32.toml  u64.toml  u8.toml  usize.args  usize.toml
crates/claptrap-core/tests/snapshots/: tests__arg__action-append.snap  tests__arg__action-count.snap  tests__arg__action-help_long.snap  tests__arg__action-set.snap  tests__arg__action-set_false.snap  tests__arg__action-version.snap  tests__arg__allow_hyphen_values.snap  tests__arg__allow_negative_numbers.snap  tests__arg__conflicts_with.snap  tests__arg__conflicts_with_all.snap  tests__arg__default_missing_value-2.snap  tests__arg__default_missing_value-bool_literal2.snap  tests__arg__default_missing_value-bool_literal3.snap  tests__arg__default_missing_value_os.snap  tests__arg__default_missing_values.snap  tests__arg__default_value-1.snap  tests__arg__default_value-2.snap  tests__arg__default_value_if-equals1.snap  tests__arg__default_value_if-equals2.snap  tests__arg__default_value_if-present.snap  tests__arg__default_value_if-unset.snap  tests__arg__default_value_ifs-1.snap  tests__arg__default_value_ifs-order.snap  tests__arg__default_values-1.snap  tests__arg__default_values-2.snap  tests__arg__display_order.snap  tests__arg__env-falsey.snap  tests__arg__env-multi.snap  tests__arg__env-option.snap  tests__arg__env.snap  tests__arg__exclusive.snap  tests__arg__global.snap  tests__arg__group.snap  tests__arg__groups.snap  tests__arg__help.snap  tests__arg__help_heading.snap  tests__arg__hide.snap  tests__arg__hide_default_value.snap  tests__arg__hide_env.snap  tests__arg__hide_env_values.snap  (+159 more)
crates/claptrap/src/: error.rs  main.rs
crates/claptrap/templates/: bash_template.sh.j2  powershell_template.ps1.j2  zsh_template.sh.j2
crates/claptrap/tests/: examples.rs  schema.rs  script.rs  shell.rs
crates/claptrap/tests/resources/config/json/: myapp.json
crates/claptrap/tests/resources/config/yaml/: myapp.yaml
crates/claptrap/tests/resources/script/bash/: spec.toml
crates/claptrap/tests/resources/shell/bash/: file.sh  stdin_heredoc_json.sh
crates/claptrap/tests/resources/shell/fish/: file.sh  stdin_heredoc_toml.sh  stdin_heredoc_yaml.sh
crates/claptrap/tests/snapshots/: examples__examples_git_toml.snap  schema__test_schema.snap  script__posix__test_pacman_script_bash.snap  script__posix__test_pacman_script_fish.snap  script__posix__test_pacman_script_powershell.snap  script__posix__test_pacman_script_zsh.snap  script__posix__test_script_bash.snap  script__posix__test_script_exec_fish.snap  script__posix__test_script_fish.snap  script__posix__test_script_powershell.snap  script__posix__test_script_zsh.snap
crates/gen-api-doc/: Cargo.toml
crates/gen-api-doc/src/: main.rs
docs/: astro.config.mjs  package-lock.json  (+1 more)
docs/gen_api_doc/: Cargo.toml
docs/gen_api_doc/src/: main.rs
(+1310 files in other folders)
