[package]
name = "claptrap"
description = "Bring the power of Clap to shell scripts."
version = "0.2.0"
authors = ["FujiApple <fujiapple852@gmail.com>"]
documentation = "https://github.com/fujiapple852/claptrap"
homepage = "https://github.com/fujiapple852/claptrap"
repository = "https://github.com/fujiapple852/claptrap"
keywords = ["cli", "clap", "parse", "arg", "shell"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.82.0"

[features]
default = ["schema"]
schema = ["schemars"]
doc_gen = []

[dependencies]
anstream = "0.6.20"
anstyle = "1.0.11"
anyhow = "1.0.98"
clap = { version = "4.5.43", features = ["derive", "string", "cargo", "wrap_help", "usage", "unstable-styles", "color", "suggestions", "error-context", "env"] }
clap-markdown = "0.1.5"
clap_complete = "4.5.56"
clap_mangen = "0.2.29"
crc32fast = "1.5.0"
indexmap = { version = "2.10.0", features = ["serde"] }
itertools = "0.14.0"
minijinja = "2.11.0"
regex = "1.11.1"
schemars = { version = "1.0.1", optional = true, features = ["derive", "indexmap2"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.142", features = ["preserve_order"] }
serde_yaml = { version = "=0.9.33", features = [] }
toml = { version = "0.9.5", features = ["preserve_order"] }

[dev-dependencies]
insta = "1.43.1"
tempfile = "3.10.1"
test-case = "3.3.1"

[[bin]]
name = "gen_api_docs"
path = "scripts/gen_api_docs.rs"
required-features = ["doc_gen"]

[lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
option_if_let_else = "allow"
cast_possible_truncation = "allow"
map_unwrap_or = "allow"
missing_const_for_fn = "allow"
struct_field_names = "allow"

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/claptrap", dest = "/usr/bin/claptrap", mode = "755" },
]
