[package]
name = "gen_api_doc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
minijinja = "2.11.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.142", features = ["preserve_order"] }
serde_yaml = { version = "=0.9.33", features = [] }
toml = { version = "0.9.5", features = ["preserve_order"] }
